--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -46,6 +46,13 @@
   --title-dots: #ffff00;
   --title-background: #0065d9;
   --date-background: #444655;
+
+  --h1-bg: #dc0012;
+  --h2-bg: #ed9200;
+  --h3-bg: #783d00;
+  --h4-bg: #62b800;
+  --h5-bg: #0083d4;
+  --h6-bg: #5000d0;
 }
 
 [data-theme="dark"] {
@@ -96,4 +103,11 @@
   --title-dots: #0026ff;
   --title-background: #00ff00;
   --date-background: #a0a0a0;
+
+  --h1-bg: #ff3142;
+  --h2-bg: #ffba4a;
+  --h3-bg: #f7f763;
+  --h4-bg: #98db4d;
+  --h5-bg: #83c8f2;
+  --h6-bg: #a56dff;
 }
