--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,9 +1,8 @@
 body {
   background-color: var(--bg-color);
-  font: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: var(--text-color);
   font-size: 1.2em;
-  line-height: normal;
 }
 
 .blog {
@@ -61,32 +60,21 @@ hr {
 
 .title {
   font-size: 2em;
-  margin-top: 0.2em;
 }
 
-.title-background {
-  background-color: var(--title-background);
-  color: var(--bg-color);
-  padding: 0.2em;
-  border-radius: 0.2em;
-  display: inline-block;
-}
+// .title-background {
+//   background-color: var(--accent);
+//   color: var(--bg-color);
+//   padding: 0.2em;
+//   border-radius: 0.2em;
+// }
 
-/* Media query for smaller screens */
-@media (max-width: 768px) {
-  .title-background {
-    font-size: 1em;
-    padding: 0.2em;
-    // white-space: normal;
-  }
-}
-.date-background {
-  background-color: var(--date-background);
-  // color: var(--text-color);
-  color: var(--bg-color);
-  padding: 0.2em;
-  border-radius: 0.2em;
-}
+// .date-background {
+//   background-color: #6361d2;
+//   color: var(--bg-color);
+//   padding: 0.2em;
+//   border-radius: 0.2em;
+// }
 
 .post-date {
   font-weight: 1000;
