--- a/templates/_base.html
+++ b/templates/_base.html
@@ -64,8 +64,9 @@
           <a
             href="{{ get_url(path='/') | safe }}"
             title="Go to home (or press 'h')"
-            ><div class="title-logo">{{config.extra.logo}}</div></a
+            ><div class="title-logo">Clearly<br />Not<br />A.I.</div></a
           >
+
           {% include "_sidebar.html" %}
         </section>
       </div>
