--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -1,4 +1,4 @@
-:is(p, li, ul, a, td, th) > code {
+:is(p, li, ul, a, td, th, h1, h2, h3, h4, h5, h6) > code {
   background-color: var(--inline-code-bg);
   color: var(--inline-code-fg);
   border-radius: 3px;
