--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -245,3 +245,33 @@ details > summary span {
   font-weight: bold;
   // text-decoration: underline;
 }
+
+h1 {
+  color: var(--h1-bg);
+  text-decoration: underline;
+}
+
+h2 {
+  color: var(--h2-bg);
+  text-decoration: underline;
+}
+
+h3 {
+  color: var(--h3-bg);
+  text-decoration: underline;
+}
+
+h4 {
+  color: var(--h4-bg);
+  text-decoration: underline;
+}
+
+h5 {
+  color: var(--h5-bg);
+  text-decoration: underline;
+}
+
+h6 {
+  color: var(--h6-bg);
+  text-decoration: underline;
+}
