--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% extends "_base.html" %} {% block title %}{{config.extra.index_title}}{%
-endblock title %} {% block content %}
+{% extends "_base.html" %} {% block title %}{{config.extra.logo}} {% endblock
+title %} {% block content %}
 
 <h1 class="title">
   <span class="title-background">{{config.extra.index_title}}</span>
