refactor: heading color and update h color name

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -47,12 +47,12 @@
   --title-background: #0065d9;
   --date-background: #444655;
 
-  --h1-bg: #dc0012;
-  --h2-bg: #ed9200;
-  --h3-bg: #783d00;
-  --h4-bg: #62b800;
-  --h5-bg: #0083d4;
-  --h6-bg: #5000d0;
+  --h1-fg: #dc0012;
+  --h2-fg: #ed9200;
+  --h3-fg: #783d00;
+  --h4-fg: #62b800;
+  --h5-fg: #0083d4;
+  --h6-fg: #5000d0;
 }
 
 [data-theme="dark"] {
@@ -104,10 +104,10 @@
   --title-background: #00ff00;
   --date-background: #a0a0a0;
 
-  --h1-bg: #ff3142;
-  --h2-bg: #ffba4a;
-  --h3-bg: #f7f763;
-  --h4-bg: #98db4d;
-  --h5-bg: #83c8f2;
-  --h6-bg: #a56dff;
+  --h1-fg: #ff3142;
+  --h2-fg: #ffba4a;
+  --h3-fg: #f7f763;
+  --h4-fg: #98db4d;
+  --h5-fg: #83c8f2;
+  --h6-fg: #a56dff;
 }
