--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -246,32 +246,30 @@ details > summary span {
   // text-decoration: underline;
 }
 
-h1 {
-  color: var(--h1-bg);
-  text-decoration: underline;
-}
-
-h2 {
-  color: var(--h2-bg);
-  text-decoration: underline;
-}
-
-h3 {
-  color: var(--h3-bg);
-  text-decoration: underline;
-}
-
-h4 {
-  color: var(--h4-bg);
-  text-decoration: underline;
-}
-
-h5 {
-  color: var(--h5-bg);
-  text-decoration: underline;
-}
-
+h1,
+h2,
+h3,
+h4,
+h5,
 h6 {
-  color: var(--h6-bg);
   text-decoration: underline;
+}
+
+h1 {
+  color: var(--h1-fg);
+}
+h2 {
+  color: var(--h2-fg);
+}
+h3 {
+  color: var(--h3-fg);
+}
+h4 {
+  color: var(--h4-fg);
+}
+h5 {
+  color: var(--h5-fg);
+}
+h6 {
+  color: var(--h6-fg);
 }
