chore: update button titles and add next/prev post keybinds

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -63,7 +63,7 @@
         <section class="sidebar" id="sidebar">
           <a
             href="{{ get_url(path='/') | safe }}"
-            title="Go to home (or press 'h')"
+            title="Go to home (or press 'g')"
             ><div class="title-logo">Clearly<br />Not<br />A.I.</div></a
           >
 
