style: add selection color to title

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -63,6 +63,11 @@ hr {
   font-size: 2em;
 }
 
+.title-background::selection {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
 .title-background {
   background-color: var(--accent);
   color: var(--bg-color);
