--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -53,6 +53,12 @@
   --h4-fg: #62b800;
   --h5-fg: #0083d4;
   --h6-fg: #5000d0;
+
+  --del-fg: #bb1600;
+  --ins-fg: #008225;
+
+  --mark-bg: gold;
+  --mark-fg: black;
 }
 
 [data-theme="dark"] {
@@ -110,4 +116,10 @@
   --h4-fg: #98db4d;
   --h5-fg: #83c8f2;
   --h6-fg: #a56dff;
+
+  --del-fg: #ff533d;
+  --ins-fg: #95ffb3;
+
+  --mark-bg: gold;
+  --mark-fg: black;
 }
