feat: add plausible analytics

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -55,6 +55,7 @@
     {% endif %} {% if config.extra.enable_lightsense_img_zoom %}
     <script src=" https://cdn.jsdelivr.net/npm/lightense-images@1.0.17/dist/lightense.min.js "></script>
     {% endif %}
+    <script defer data-domain="blog.dpi0.cloud" src="https://plausible-analytics.dpi0.cloud/js/script.js"></script>
     <script src="{{ get_url(path='js/main.js') | safe }}" defer></script>
   </head>
 
